fix: navigation mobile 100vw + position flèches + hover SVG bleu

--- a/src/sections/Machine/Machine.module.css
+++ b/src/sections/Machine/Machine.module.css
@@ -139,6 +139,7 @@
   width: 18px;
   height: 18px;
   background: white;
+  transition: background 0.5s cubic-bezier(0.4, 0, 0, 1);
   clip-path: path("M 6.64746 4.41688 C 6.94036 4.1241 7.41515 4.12402 7.70801 4.41688 C 8.00074 4.70974 8.00074 5.18456 7.70801 5.47742 L 4.43555 8.74988 H 15.375 L 15.4521 8.75379 C 15.8301 8.79242 16.125 9.11173 16.125 9.49988 C 16.1249 9.88795 15.8301 10.2074 15.4521 10.246 L 15.375 10.2499 H 4.43555 L 7.70801 13.5214 L 7.75977 13.579 C 7.99974 13.8736 7.98249 14.3084 7.70801 14.5829 C 7.43336 14.8574 6.99864 14.874 6.7041 14.6337 L 6.64746 14.5829 L 2.09473 10.0302 C 1.95413 9.88956 1.87506 9.69871 1.875 9.49988 C 1.875 9.30103 1.95415 9.11025 2.09473 8.96961 L 6.64746 4.41688 Z");
 }
 
@@ -148,8 +149,14 @@
   width: 18px;
   height: 18px;
   background: white;
+  transition: background 0.5s cubic-bezier(0.4, 0, 0, 1);
   clip-path: path("M 6.64746 4.41688 C 6.94036 4.1241 7.41515 4.12402 7.70801 4.41688 C 8.00074 4.70974 8.00074 5.18456 7.70801 5.47742 L 4.43555 8.74988 H 15.375 L 15.4521 8.75379 C 15.8301 8.79242 16.125 9.11173 16.125 9.49988 C 16.1249 9.88795 15.8301 10.2074 15.4521 10.246 L 15.375 10.2499 H 4.43555 L 7.70801 13.5214 L 7.75977 13.579 C 7.99974 13.8736 7.98249 14.3084 7.70801 14.5829 C 7.43336 14.8574 6.99864 14.874 6.7041 14.6337 L 6.64746 14.5829 L 2.09473 10.0302 C 1.95413 9.88956 1.87506 9.69871 1.875 9.49988 C 1.875 9.30103 1.95415 9.11025 2.09473 8.96961 L 6.64746 4.41688 Z");
   transform: scaleX(-1);
+}
+
+.navButton:hover .navPrev::after,
+.navButton:hover .navNext::after {
+  background: var(--bleu);
 }
 
 /* Text Animations */
